# python-test-project

./: .cookiecutter.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/ptp/: __init__.py  __main__.py
tests/: __init__.py  test_main.py
